# sym

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  Library.cmake  README.md  sym.h
calculus/: numerical-derivative.h  quadrature.h
core/: constant.h  constants.h  expression.cc  expression.h  symbol.h
core/detail/: acos.h  addition.h  asin.h  constant.h  cos.h  expression-binary.h  expression-multiple.h  expression-unary.h  expression.cc  expression.h  id.h  logarithm.h  power.h  product.h  sin.h  symbol.cc  symbol.h  symbolic-constant.h
main/examples/addition/: addition.cc
main/examples/inverse/: inverse.cc
main/examples/precedence/: precedence.cc
main/examples/product/: product.cc
main/examples/substitute/: substitute.cc
main/examples/symbols/: symbols.cc
main/test/derivative/: derivative.cc
main/test/evaluate/: evaluate.cc
main/test/inverse/: inverse.cc
utils/: visitor.h
